--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -7,3 +7,4 @@ Programming
 Graphics
 	Chris Handy
 	Roman Font: uncredited from https://www.dafont.com/day-roman.font
+	Table texture: ambientCG.com, licensed under CC0 1.0 Universal.
