--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -11,7 +11,7 @@ Short Term
 ✓ Restrict map panning to map borders
 * Add back mouse panning. Mouse changes to hand icon when RH mouse button is down
 * Handle zooming into and out of the map area the mouse is over
-* Change marble table to wood
+✓ Change marble table to wood
 * Add mini-map to move instantly
 * Buttons on mini-map zoom to Rome, full zoom-out
 * Using regions you can show military strength, income etc on the map with the shader
