--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -9,8 +9,8 @@ Short Term
 
 ✓ Mouse over highlights regions
 ✓ Restrict map panning to map borders
-* Add back mouse panning. Mouse changes to hand icon when RH mouse button is down
-* Handle zooming into and out of the map area the mouse is over
+✓ Add back mouse panning. Mouse changes to hand icon when RH mouse button is down
+✓ Handle zooming into and out of the map area the mouse is over
 ✓ Change marble table to wood
 * Add mini-map to move instantly
 * Buttons on mini-map zoom to Rome, full zoom-out
