--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -8,3 +8,6 @@ Graphics
 	Chris Handy
 	Roman Font: uncredited from https://www.dafont.com/day-roman.font
 	Table texture: ambientCG.com, licensed under CC0 1.0 Universal.
+	Map by Adrien Coquet from the Noun Project
+	Coins by Chanut is Industries from the Noun Project
+	Sword by IYIKON from the Noun Project
