--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -12,8 +12,7 @@ Short Term
 ✓ Add back mouse panning. Mouse changes to hand icon when RH mouse button is down
 ✓ Handle zooming into and out of the map area the mouse is over
 ✓ Change marble table to wood
-* Add mini-map to move instantly
-* Buttons on mini-map zoom to Rome, full zoom-out
+✓ Add mini-map to move instantly
 * Using regions you can show military strength, income etc on the map with the shader
 
 
