--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -8,7 +8,7 @@ Short Term:
 -----------
 
 * Show military strength and money on regions
-* Remove region owner from region, calculate region owners from owners
+✓ Remove region owner from region, calculate region owners from owners
 * Add 2 senators to map display
 ✓ Add region borders and *roads to map display
 ✓ Add some more regions
