Added pop-up menu screen when esc pressed

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -11,3 +11,4 @@ Graphics
 	Map by Adrien Coquet from the Noun Project
 	Coins by Chanut is Industries from the Noun Project
 	Sword by IYIKON from the Noun Project
+	SPQR text on pause screen: Ssolbergj - Own work, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=2992630
