--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -7,13 +7,13 @@ List of current goals: Mark with ✓ when done, * when not
 Short Term:
 -----------
 
-* Show military strength and money on regions
+✓ Show military strength and money on regions
 ✓ Remove region owner from region, calculate region owners from owners
 * Add 2 senators to map display
 ✓ Add region borders and *roads to map display
 ✓ Add some more regions
 ✓ Design an enemy soldier
-* Improve the current soldier
+✓ Improve the current soldier
 * Add pop-up ESC menu
 
 
