--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -8,7 +8,10 @@ Graphics
 	Chris Handy
 	Roman Font: uncredited from https://www.dafont.com/day-roman.font
 	Table texture: ambientCG.com, licensed under CC0 1.0 Universal.
-	Map by Adrien Coquet from the Noun Project
-	Coins by Chanut is Industries from the Noun Project
-	Sword by IYIKON from the Noun Project
+	Font for year display in lower left: Roman - Steve Deffeyes (https://www.1001freefonts.com/roman.font)
+	Icons:
+		Map by Adrien Coquet from the Noun Project
+		Coin by Chanut is Industries from the Noun Project
+		Sword by IYIKON from the Noun Project
+		Gold and silver by Teewara soontorn from the Noun Project
 	SPQR text on pause screen: Ssolbergj - Own work, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=2992630
