--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -15,3 +15,4 @@ Graphics
 		Sword by IYIKON from the Noun Project
 		Gold and silver by Teewara soontorn from the Noun Project
 	SPQR text on pause screen: Ssolbergj - Own work, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=2992630
+	Circle unit highlight: Background vector created by kbibibi - https://www.freepik.com/vectors/background
