--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -9,8 +9,8 @@ Short Term:
 
 ✓ Make sure we have 3 models at a minimum: A Roman, a Greek and a Celt
 * Add armies in region to region display
-* Capture a click on 3d models (towns, units)
-* Add highlight to army unit when selected
+* Capture a click on 3d models (towns, units). This highlights soldiers for now.
+✓ Add highlight to army unit
 * Experiment with full window
 * Get a senator / leader 3d unit and add to map (starts at Rome)
 	- This is only ever for a campaign
