Added army display list in region data

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -8,7 +8,7 @@ Short Term:
 -----------
 
 ✓ Make sure we have 3 models at a minimum: A Roman, a Greek and a Celt
-* Add armies in region to region display
+✓ Add armies in region to region display
 * Capture a click on 3d models (towns, units). This highlights soldiers for now.
 ✓ Add highlight to army unit
 * Experiment with full window
