--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -12,16 +12,30 @@ Short Term:
 * Capture a click on 3d models (towns, units). This highlights soldiers for now.
 ✓ Add highlight to army unit
 * Experiment with full window
-* Get a senator / leader 3d unit and add to map (starts at Rome)
-	- This is only ever for a campaign
-	- But in a civil war, you'll want all of them displayed?
-	- Maybe display as a flag, or better an eagle
-	- Always with troops, otherwise we need have another location in the json
+* Get a senator / leader 3d unit and add to map. Starts at home. it's an eagle on stick
 * Add 4 regions
-* Add some roads
-	- Work out how the shader draws these
-	- Passing over a massive image isn't that bad
+* Add some roads, and work out how these are generated and drawn
 * Make sure everything displayed on the screen is populated from data loaded
+* Add a cheeky mountain range as mesh object over Switzerland
+✓ FIX: Click on water shows units in region
+* This the end of the 0.1 release.
+
+
+Editor
+------
+
+A 2d map, on which are placed:
+	Cities
+	UnitLocations
+	Roads
+
+Cities are a scene that exposes the data requirements for a region
+	Since all regions have at least a city location
+UnitLocations are where units are placed
+We can check against the region image to work out what regions they are in
+Roads are 2D lines we render to an Image
+We also save the routes, so a unit can walk along the route, and the arrow graphic for moving.
+All this is generated to a json file and a dir of images when the scene is played
 
 
 Couldn't really be solved (add to issues):
@@ -53,3 +67,44 @@ Medium Term
 	- Choose to move units next to leader
 	- Choose to attack
 * Code a move
+* We must add sound into the game at some point. But it needs to be decided how to make the sound.
+
+
+
+Wish-List Of Graphical Improvements
+-----------------------------------
+
+I want to make the map feel alive, and your gaming changes it.
+Since we have roads, and units move along roads, we know the safe spaces on the map and can draw there.
+
+Cities:
+-------
+
+Vary from empire to empire
+Show changes in size
+Have something animated (a little flag?)
+
+Roads:
+------
+
+Can be shown in various stages of upkeep
+Can change color
+
+Units:
+------
+
+Can see stats overlaid
+The Roman units should look Roman
+
+Detail:
+-------
+
+We have grass in some places and small rocks in others
+The sea is not just plain blue but moves a bit
+Boats gently rock up and down
+A mountain mesh can be found
+Rivers are drawn
+Waves lap against the shore
+Smoke wafts from camps and factories
+Small people do simple jobs
+Clouds for fog-of-war for regions you know nothing about
