Editor can now make road images

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -9,14 +9,14 @@ Short Term:
 
 ✓ Make sure we have 3 models at a minimum: A Roman, a Greek and a Celt
 ✓ Add armies in region to region display
-* Capture a click on 3d models (towns, units). This highlights soldiers for now.
+* Add some roads, and work out how these are generated and drawn
+	- With an editor. Quite some work
 ✓ Add highlight to army unit
-* Experiment with full window
+* Capture a click on 3d models (towns, units). This highlights soldiers for now.
 * Get a senator / leader 3d unit and add to map. Starts at home. it's an eagle on stick
 * Add 4 regions
-* Add some roads, and work out how these are generated and drawn
+
 * Make sure everything displayed on the screen is populated from data loaded
-* Add a cheeky mountain range as mesh object over Switzerland
 ✓ FIX: Click on water shows units in region
 * This the end of the 0.1 release.
 
