--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -10,8 +10,8 @@ Short Term:
 ✓ Make sure we have 3 models at a minimum: A Roman, a Greek and a Celt
 ✓ Add armies in region to region display
 ✓ Add highlight to army unit
-* Add some roads, and work out how these are generated and drawn
-	- With an editor. Quite some work
+✓ Add some roads, and work out how these are generated
+* Draw the current roads
 * Capture a click on 3d models (towns, units). This highlights soldiers for now.
 * Get a senator / leader 3d unit and add to map. Starts at home. it's an eagle on stick
 * Add 4 regions
