Added return types to many functions. Tidied up some typos and code comments

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -5,7 +5,7 @@ Programming
 	Chris Handy
 
 Graphics
-	Chris Handy
+	Chris Handy if uncredited
 	Roman Font: uncredited from https://www.dafont.com/day-roman.font
 	Table texture: ambientCG.com, licensed under CC0 1.0 Universal.
 	Font for year display in lower left: Roman - Steve Deffeyes (https://www.1001freefonts.com/roman.font)
@@ -20,3 +20,5 @@ Graphics
 		Learning by jai from the Noun Project
 	SPQR text on pause screen: Ssolbergj - Own work, CC BY 3.0, https://commons.wikimedia.org/w/index.php?curid=2992630
 	Circle unit highlight: Background vector created by kbibibi - https://www.freepik.com/vectors/background
+	Yellow paper opn events dialog by studiopratisaad0 from Pixabay
+	Sousse mosaic © Ad Meskens / Wikimedia Commons
