--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -11,14 +11,14 @@ Short Term:
 ✓ Remove the current road data from the json and use the editor json
 ✓ Make sure everything displayed on the screen is populated from data loaded
 ✓ Add 4 regions
-* FIX: map joins not joining in images
+✓ FIX: map joins not joining in images
 * Add an event: A modal dialog with an image, a question and a range of text answers.
 * Capture a click on 3d models (towns, units). This highlights soldiers for now.
 * Get a senator / leader 3d unit and add to map. Starts at home. It's an eagle on stick
 
 * The enemy must have some troops, i.e. models added at startup
 * Add click sounds on events
-* FIX: Godot crashes on Windows when importing project
+* FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
 * This is the 0.1 release.
 * Post on Reddit, with info
