--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -25,24 +25,6 @@ Short Term:
 * Make a simple website with blog updates (i.e., a subreddit)
 
 
-Editor
-------
-
-✓ A 2d map, on which are placed:
-	✓ Cities
-	✓ UnitLocations
-	✓ Roads
-
-✓ Cities are a scene that exposes the data requirements for a region
-	Since all regions have at least a city location
-✓ UnitLocations are where units are placed
-✓ We can check against the region image to work out what regions they are in
-✓ Roads are 2D lines we render to an Image
-✓ We also save the routes, so a unit can walk along the route, and the arrow graphic for moving.
-	Note: Arrow image generation left to later, as it depends on route and there are far too many possible variations
-✓ All this is generated to a json file and a dir of images when the scene is played
-
-
 Couldn't really be solved (add to issues):
 ------------------------------------------
 
@@ -63,7 +45,7 @@ Medium Term
 	✓ All map moving
 	✓ All region highlighting
 	✓ All UI elements
-	* All data loaded from json
+	✓ All data loaded from json
 	* No issues or bugs
 * Add a leader figure, allow movement
 	- I.e. a campaign
