--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -2,27 +2,23 @@ TODO
 ====
 
 List of current goals: Mark with ✓ when done, * when not
+This is essentially the "how I will program the game" document
 
 
 Short Term:
 -----------
 
-✓ Draw the current roads
-✓ Remove the current road data from the json and use the editor json
-✓ Make sure everything displayed on the screen is populated from data loaded
 ✓ Add 4 regions
 ✓ FIX: map joins not joining in images
 ✓ Add an event: A modal dialog with an image, a question and a range of text answers.
+✓ The enemy must have some troops, i.e. models added at startup
 * Capture a click on 3d models (towns, units). This highlights soldiers for now.
 * Get a senator / leader 3d unit and add to map. Starts at home. It's an eagle on stick
-
-* The enemy must have some troops, i.e. models added at startup
 * Add click sounds on events
+* Add 4 more regions
 * FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
 * This is the 0.1 release.
-* Post on Reddit, with info
-* Make a simple website with blog updates (i.e., a subreddit)
 
 
 Couldn't really be solved (add to issues):
@@ -42,7 +38,9 @@ Goals for v0.2
 We now move to a making a game.
 Best to implement the most common stuff first, as it's the most important.
 	1: Clicking a unit allows you to move it. Any unit, any route. Just have one unit.
+		- Just let it float around the map and make it work well
 		- you need: Arrows, Sounds, Follow a Path, Select from shown paths, Move in world data
+		- Needs to "just work" in the best possible way.
 	2: Add an enemy unit
 		- you need: show possible danger on routes
 		- when moving against an enemy in the same region, it is clearly a battle you want
@@ -66,7 +64,7 @@ Complete a campaign
 
 0.5: Emperors
 0.6: Cards
-0.7: An economy
+0.7: An economy and culture
 0.8: More events (this is the start of the cream)
 0.9: Front end, saving, loading, high scores, scenarios, credits
 1.0: More events, polish and more data
