Added leaders eagle

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -22,3 +22,4 @@ Graphics
 	Circle unit highlight: Background vector created by kbibibi - https://www.freepik.com/vectors/background
 	Yellow paper opn events dialog by studiopratisaad0 from Pixabay
 	Sousse mosaic © Ad Meskens / Wikimedia Commons
+	Leaders eagle by Phillip Handy
