--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -13,7 +13,7 @@ Short Term:
 ✓ Add an event: A modal dialog with an image, a question and a range of text answers.
 ✓ The enemy must have some troops, i.e. models added at startup
 ✓ Capture a click on 3d models (towns, units). This highlights soldiers for now.
-* Get a senator / leader 3d unit and add to map. Starts at home. It's an eagle on stick
+✓ Get a senator / leader 3d unit and add to map. Starts at home. It's an eagle on stick
 * Add click sounds on events
 * FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
