Updated docs. Toned down region highlight

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -15,6 +15,14 @@ Short Term:
 ✓ Capture a click on 3d models (towns, units). This highlights soldiers for now.
 ✓ Get a senator / leader 3d unit and add to map. Starts at home. It's an eagle on stick
 * Add click sounds on events
+* Minor things to clear up:
+	* Leader unit start position from json
+	* Leader unit position and decided and added in code
+	✓ Try toning down the region highlight
+	* Add a UI dialog, looks like the pause menu
+	* Change the pause menu button "About" to "Quit"
+	* Confim the quit with the UI dialog
+	* ESC should close the pause window (but not any dialog on top)
 * FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
 * This is the 0.1 release.
