--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -23,6 +23,13 @@ Short Term:
 	* Change the pause menu button "About" to "Quit"
 	* Confim the quit with the UI dialog
 	* ESC should close the pause window (but not any dialog on top)
+	* Fix the issue where the starting region display is incorrect
+	* When a region is clicked, it stays highlighted until another click
+	* A click on a unit highlights the region display unit
+	* A mouse-over on the region display unit highlights the unit in a different way
+	* A click on the region display unit is the same as a click on the unit
+	* Add 4 new regions
+	* Add a few more roads, mainly to help the next phase
 * FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
 * This is the 0.1 release.
