--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -22,7 +22,7 @@ Short Term:
 ✓ ESC should close the pause window
 ✓ Fix the issue where the starting region display is incorrect
 * Add 4 new regions
-* Add a few more roads, mainly to help the next phase
+✓ Add a few more roads, mainly to help the next phase
 * FIX: Godot not displaying map on Windows
 * Build at minimum a Windows and Linux release of this
 * This is the 0.1 release.
