Added visual road status in editor

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -11,10 +11,11 @@ Short Term:
 ✓ Maps are a collection of nodes joined by paths
 ✓ A node can be a city or a unit base. A node can have meta-data (has a port / makes good wine / famouse for sculpture etc..)
 ✓ There is only a single "node" type in the editor, and it can display as a city or a plain node
-Generate all roads as:
-* A line with borders
+✓ Generate all roads as:
+✓ A line with borders
 ✓ A single line
 ✓ A dotted line
+* Import all road data via the new json file
 * All nodes must be shown on the in-game map (NOT the mini map)
 * When a unit is clicked, all the possible move nodes are highlighted
 
