--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -13,9 +13,9 @@ Editor Improvements:
 ✓ Unit data held in nodes
 ✓ Add shader to editor for regions
 ✓ Allow changing region ownership in RegionData
-* Remove Nim code for checking JSON data
+✓ Remove Nim code for checking JSON data
 * All nodes must be shown on the in-game map (NOT the mini map)
-* Add meta-item for Roman money and year start
+✓ Add meta-item for Roman money and year start
 * All json data exported from editor
 * Soldiers, vities
 * Allow click only Roman units
